@@ -1,3 +1,8 @@
+2008-11-09  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/autotools.py: make sure autogen.sh/configure are
+	executable.
+
 2008-11-08  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.26.modules: updated eog dependencies.
